<resources>
    <string name="app_name">Yah! Money</string>
    <string name="title_activity_login">login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="console">Console</string>
    <string name="type_here">Type here…</string>
    <string name="send">Send</string>
    <string name="received">received</string>
    <string name="amount">Amount</string>
    <string name="time">time</string>
    <string name="add_from">Add From</string>
    <string name="contacts">Contacts</string>
    <string name="custom">Custom</string>
    <string name="add_custom">Custom</string>
    <string name="add_from_contacts">Contacts</string>
    <string name="add_form">Add From</string>
    <string name="add_custom_heading">Add Custom</string>
    <string name="phone_no">Phone No</string>
    <string name="name">Name</string>
    <string name="add">add</string>
    <string name="close">Close</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="login_using_phone_no">Login Using Phone No</string>
    <string name="type_phone_no">Type Phone No…</string>
    <string name="type_otp">Type OTP…</string>
    <string name="request_otp">Request OTP</string>
    <string name="submit">Submit</string>
    <string name="otp_is_not_valid">OTP is not Valid</string>
    <string name="please_enter_valid_phone_no">Please Enter Valid Phone No</string>
    <string name="add_from_contacts2">Add From Contacts</string>
    <string name="search">Search</string>
    <string name="number">Number</string>
    <string name="date">Date</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="resend">Resend</string>
    <string name="call">call</string>
    <string name="type_name">Type Name...</string>
    <string name="save">Save</string>
    <string name="type_your_name">Type Your Name...</string>
    <string name="invoice">invoice</string>
</resources>