<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/alert"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:text="@string/add_custom_heading"
        android:textColor="@color/color5"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/alert_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:autofillHints="no"
        android:background="@drawable/edit_text_back"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="@color/color5"
        android:textColorHint="@color/color5_trans2"
        android:textCursorDrawable="@drawable/cursor" />

    <EditText
        android:id="@+id/alert_phone_no"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:autofillHints="no"
        android:background="@drawable/edit_text_back"
        android:ems="10"
        android:hint="@string/phone_no"
        android:inputType="phone"
        android:maxLength="10"
        android:textColor="@color/color5"
        android:textColorHint="@color/color5_trans2"
        android:textCursorDrawable="@drawable/cursor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/alert_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/close"
            android:textColor="@color/color5"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/alert_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/add"
            android:textColor="@color/color5"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>