<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_back"
    tools:context=".login2">

    <LinearLayout
        android:id="@+id/login_name_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_view_back"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Heading2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/bold"
            android:text="@string/login_using_phone_no"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/name_login"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="40dp"
            android:ems="10"
            android:hint="@string/type_your_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@color/color5"
            android:textColorHint="@color/color5_trans2"
            android:textCursorDrawable="@drawable/cursor"
            tools:ignore="TextFields" />

        <TextView
            android:id="@+id/nameWarn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:text="@string/please_enter_valid_phone_no"
            android:textColor="@color/red"
            android:textSize="14sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/submit_name"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/submit"
            android:textColor="@color/color5"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>